Visual fixes (missing padding property in css)

--- a/src/datera.css
+++ b/src/datera.css
@@ -215,6 +215,7 @@
 .datera--calendar > .datera--grid > .datera--day.in-range,
 .datera--calendar > .datera--grid > .datera--day.end-range {
   padding-block: 1px;
+  padding-inline: 0px;
 }
 
 .datera--calendar
